[package]
name = "TelegramCurrencyBot"
version = "0.0.1"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
reqwest = "0.12.5"
roxmltree = "0.20.0"
chrono = "0.4.38"